test/good/loops/break1.px

i = 0
while true do
    i += 1
    if i > 42 do
        break
print i
