test/bad/basic/init04.px

Bool b
if 0 != 1 do
    b = true
b' = b
